@@ -6,6 +6,14 @@
 
 <variablelist>
   <varlistentry>
+    <term>Pending (2007-08-04)</term>
+    <listitem>
+      <para>
+Added documentation for new function SetLegendStyle.
+      </para>
+    </listitem>
+  </varlistentry>
+  <varlistentry>
     <term>2006-12-01</term>
     <listitem>
       <para>
